--- a/style.css
+++ b/style.css
@@ -3,21 +3,30 @@ body {
     min-height: 100vh;
     display: flex;
     align-items: center;
+    background-color: white;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 .calcbody {
     width: 400px;
     margin: auto;
     padding: 10px;
-    border: solid 1px black;
-    border-radius: 8px;
+    border: solid 5px black;
+    background-color: black;
+    border-radius: 5px;
 }
 
 .display .container {
     text-align: right;
     border: solid 1px black;
-    border-radius: 8px;
-    padding-right: 3px;
+    padding-right: 5px;
+    background-color: lightgray;
+    font-size: 50px;
+}
+
+#display {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .buttons .container {
@@ -28,4 +37,51 @@ body {
 
 .container button {
     flex-basis: 25%;
+}
+
+.misc, .operations, .numbers {
+    font-size: 30px;
+    padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid black;
+    background-color: rgb(100, 100, 100);
+    color: lightgray;
+    border-radius: 5px;
+}
+
+.numbers {
+    background-color: rgb(100, 100, 100);
+    color: lightgray;
+}
+
+.misc:hover, .numbers:hover {
+    background-color: black;
+}
+
+#sign:hover, #percentage:hover, .operations:hover {
+    background-color: rgb(53, 175, 216);
+}
+
+#equal {
+    background-color: rgb(100, 100, 100);
+    color: lightgray;
+}
+
+#equal:hover {
+    background-color: #0ea198;
+}
+
+#delete {
+    background-color: rgb(100, 100, 100);
+    color: lightgray;
+    font-weight: bold;
+}
+
+#delete:hover {
+    background-color: #BD2A2E;
+}
+
+#clear:hover {
+    background-color: #BD2A2E;
 }
