--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
     border: solid 5px black;
     background-color: black;
     border-radius: 5px;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 }
 
 .display .container {
@@ -29,13 +30,28 @@ body {
     margin-bottom: 10px;
 }
 
-.buttons .container {
-    margin-top: 10px;
+.toprow {
     display: flex;
     flex-wrap: wrap;
+    
+    margin-top: 10px;
 }
 
-.container button {
+.cleardelete {
+    font-size: 30px;
+    padding: 10px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    border: 1px solid black;
+    background-color: rgb(100, 100, 100);
+    color: lightgray;
+    border-radius: 5px;
+    flex-basis: 25%;
+}
+
+.lowerrows {
+    display: flex;
+    flex-wrap: wrap;
     flex-basis: 25%;
 }
 
@@ -48,6 +64,7 @@ body {
     background-color: rgb(100, 100, 100);
     color: lightgray;
     border-radius: 5px;
+    flex-basis: 25%;
 }
 
 .numbers {
@@ -66,6 +83,7 @@ body {
 #equal {
     background-color: rgb(100, 100, 100);
     color: lightgray;
+    flex-basis: 50%;
 }
 
 #equal:hover {
@@ -80,6 +98,10 @@ body {
 
 #delete:hover {
     background-color: #BD2A2E;
+}
+
+#clear {
+    flex-basis: 50%;
 }
 
 #clear:hover {
